# cgo_repro

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE  build_and_run.sh  go.mod
repro/: BUILD.bazel  repro.go
utils/: build_docker.sh
