module(
    name = "cgo_repro",
    repo_name = "cgo_repro",
)

bazel_dep(name="platforms", version="0.0.8")

################################################################################
# Golang #######################################################################
################################################################################

bazel_dep(name = "rules_go", version = "0.48.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.37.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_mattn_go_sqlite3",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_version = "1.21.1"
go_sdk.download(version = go_version)
go_sdk.download(
    version = go_version,
    goarch = "amd64",
    goos = "linux",
)

################################################################################
# Packaging Utilities ##########################################################
################################################################################

bazel_dep(name = "rules_pkg", version = "0.10.1")

################################################################################
# Bazel Utilities ##############################################################
################################################################################

bazel_dep(name = "aspect_bazel_lib", version = "2.7.7", dev_dependency = True)
