load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_binary(
    name = "repro",
    embed = [":repro_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "repro_library",
    srcs = ["repro.go"],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_mattn_go_sqlite3//:go_default_library",
    ],
    cgo = True,
)

pkg_tar(
    name = "tar",
    srcs = [":repro"],
)

platform_transition_filegroup(
    name = "linux_tarball",
    srcs = [":tar"],
    target_platform = "@io_bazel_rules_go//go/toolchain:linux_amd64_cgo",
)
